removed spurious --enable-preview line
Signed-off-by: ceki <ceki@qos.ch>