@@ -80,7 +80,6 @@
         <configuration>
           <source>25</source>
           <target>25</target>
-          <compilerArgs>--enable-preview</compilerArgs>
         </configuration>
       </plugin>
 
